# jpegxl-net

./: .gitignore  .gitmodules  CLAUDE.md  Directory.Build.props  Directory.Build.targets  JpegXL.Net.slnx  LICENSE  README.md  collect-native.sh  rebuild-all.sh
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: build-native.yml  ci.yml  publish.yml
docs/: IMPLEMENTATION_PLAN.md  csbindgen-README.md
examples/JpegXL.MacOS/: AppDelegate.cs  BrotliOperations.cs  ComparisonDividerView.cs  HdrMetalView.cs  Info.plist  JpegXL.MacOS.csproj  MainWindow.cs  NOTES-HDR.md  Program.cs  README.md  run.sh
examples/JpegXL.Viewer/: App.axaml  App.axaml.cs  Info.plist  JpegXL.Viewer.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  README.md  app.manifest  bundle-macos.sh  run-animation-test.sh
native/jxl-ffi/: Cargo.toml  build-native.sh  build.rs
native/jxl-ffi/.cargo/: config.toml
native/jxl-ffi/src/: cms.rs  conversions.rs  decoder.rs  decoder_tests.rs  lib.rs  types.rs
native/jxl-ffi/src/tone_mapping/: bt2446a.rs  bt2446a_linear.rs  bt2446a_perceptual.rs  common.rs  mod.rs  rec2408.rs  test.rs
native/jxl-ffi/tools/create-test-metadata/: Cargo.toml
native/jxl-ffi/tools/create-test-metadata/src/: main.rs
native/jxlrs/: Cargo.toml  Cross.toml  build-native.sh  build.rs  cbindgen.toml
native/jxlrs/include/: jxlrs.h
native/jxlrs/src/: conversions.rs  decoder.rs  decoder_tests.rs  error.rs  lib.rs  types.rs
scripts/: avif2jxl.sh
src/: JpegXL.Net.csproj  JpegXLDecoder.cs
src/JpegXL.Net/: ExifData.cs  ExifDataParser.cs  ExifRational.cs  IccColorSpaceInfo.cs  IccHeaderInfo.cs  IccProfileParser.cs  JpegXL.Net.csproj  JxlAnimation.cs  JxlAnimationMetadata.cs  JxlBasicInfo.Extensions.cs  JxlBasicInfo.cs  JxlBitDepth.Extensions.cs  JxlBitDepth.cs  JxlColorProfile.cs  JxlDecodeOptions.Extensions.cs  JxlDecodeOptions.cs  JxlDecoder.cs  JxlException.cs  JxlImage.cs  JxlMetadata.cs  JxlMetadataBox.cs  JxlMetadataCaptureOptions.Extensions.cs  JxlPixelFormat.Extensions.cs  JxlToneMapping.cs  NativeLibraryLoader.cs  NativeMethods.Init.cs  NativeMethods.g.cs
src/JpegXL.Net.Generators/: JpegXL.Net.Generators.csproj  NativeTypeGenerator.cs
test/: JpegXL.Net.Tests.csproj  JpegXLDecoderTests.cs  run-coverage.sh
test/JpegXL.Net.Tests/: ColorProfileTests.cs  ExifMetadataTests.cs  JpegXL.Net.Tests.csproj  JpegXLDecoderTests.cs  run-coverage.sh
test/TestData/: hdr_linear_test.jxl
(+9 files in other folders)
