[package]
name = "jxl-ffi"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
description = "C-API bindings for jxl-rs JPEG XL decoder"
repository = "https://github.com/user/jpegxl-net"

[lib]
name = "jxl_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jxl = { path = "../jxl-rs/jxl" }
lcms2 = { version = "6.1", default-features = false, features = ["static"], optional = true }
bytemuck = { version = "1", optional = true }

[build-dependencies]
csbindgen = "1.9"

[features]
default = ["cms-lcms2"]
cms-lcms2 = ["dep:lcms2", "dep:bytemuck"]
# SIMD features passthrough
all-simd = ["jxl/all-simd"]
sse42 = ["jxl/sse42"]
avx = ["jxl/avx"]
avx512 = ["jxl/avx512"]
neon = ["jxl/neon"]
